itis3135/styles/dark.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');

body{
    font-family: 'Inter', sans-serif;
    margin: 0;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}
header{
    background-color: #010409;
}
.nav-top{
    padding: 5px;
    display: flex;
    align-items:center;
    justify-content: space-between;
}
.nav-bottom{
    padding: 5px;
    display: flex;
    align-items:center;
    justify-content: center;
}
.navlist{
    padding: 0;
    list-style-type:none;
    display: flex;
    gap: 16px;
    align-items: center;
    justify-content: center;
}
.navlist-right{
    padding: 0 16px;
    list-style-type:none;
    display: flex;
    gap: 16px;
    justify-content: flex-end;
    align-items: center;
}
.name{
    font-size: 20px;
    font-weight: 900;
    text-decoration: none;
    color: #c9d1d9;
    padding: 0px 16px;
}
.navlink{
    text-decoration: none;
    font-weight: 400;
}
.link{
    text-decoration: none;
}
.main-divider{
    margin: 0;
    border: 0;
    border-top: 1px solid #30363d;
    box-shadow: inset 0 -1px 0 #21262d;
}
.footer-split{
    max-width: 650px;
    margin: auto;
    border: 0;
    border-top: 1px solid #30363d;
}
main{
    background-color: #0d1117;
    flex: 1;
}
.index-main{
    background: linear-gradient(to top, #0d1117ba, #010409cc), url("../images/saber-bg.png");
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: center;
}
.project-main{
    display:flex;
    align-items: center;
    justify-content: center;
}
.about-box{
    background-color: #161b22;
    border: 1px solid #30363d;
    border-radius: 10px;
    box-shadow: inset 0 -1px 0 #21262d;
    box-shadow: 2px 2px 5px #010409;
    padding: 16px;
    display: flex;
    justify-content: center;
    align-items: center;
}
.left-side-main{
    width: 500px;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.right-side-main{
    width: 500px;
}
.project-image-box{
    height: 75vh;
    width: 75%;
    background-color: #161b22;
    border: 1px solid #30363d;
    border-radius: 10px;
    box-shadow: inset 0 -1px 0 #21262d;
    box-shadow: 2px 2px 5px #010409;
    padding: 16px;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 10px;
}
.project-image-item{
    background-color: #0104098d;
    border: 1px solid #30363d;
    border-radius: 10px;
    box-shadow: inset 0 -1px 0 #21262d;
    box-shadow: 2px 2px 5px #010409;
    width: 49%;
    height: 49%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0;
}
.proj-item1{
    background: linear-gradient(to top, #0d1117ba, #010409cc), url("../../projects/images/javacoffee-ss.png");
    background-position: right;
}
.proj-item2{
    background: linear-gradient(#0d1117ba, #010409cc), url("../../projects/images/bootstrapping-ss.png");
    background-size: cover;
    background-position: center;
}
.proj-item3{
    background: linear-gradient(to right, #0d1117ba, #010409cc), url("../../projects/images/odinlanding-ss.png");
    background-size: cover;
    background-position: center;
}
.proj-item4{
    background: linear-gradient(#0d1117ba, #010409cc), url("../../projects/images/itis-ss.png");
    background-position: center;
} 
.heading, .center, .end{
    text-align: center;
    color: #c9d1d9;
}
.right{
    text-align: right;
    color: #c9d1d9;
}
.color{
    color: #c9d1d9;
}
.intro{
    margin: auto;
    padding-top: 10px;
    max-width: 60%;
    color:#c9d1d9
}
footer{
    background-color: #010409;
}
.introimage{
    max-width: 30%;
    max-height: 50%;
    display: block;
    margin: 10px auto;
    border-radius: 10px;
}
.index-image{
    border: 1px solid #30363d;
    box-shadow: inset 0 -1px 0 #21262d;
    border-radius: 50%;
    max-width: 50%;
}
.status-color{
    color: #f85249d3;
}
a:link {
    color: #c9d1d9;
}  
a:visited {
    color: #c9d1d9;
}
a:hover {
    color: #f85249d3;
}
a:active {
    color: #c9d1d9;
}

/* color palette
#010409 header/footer
#0d1117 main
#30363d #21262d #161b22 alt
#c9d1d9 text
*/

